--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   },
   "dependencies": {
     "next": "latest",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "postcss-preset-env": "^7.0.1",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.0"
   }
 }
