--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "next": "latest",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -16,6 +17,8 @@
     "sass": "^1.43.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
