--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "conventional-changelog-conventionalcommits": "^4.5.0",
     "next": "latest",
     "node-sass": "^6.0.1",
@@ -19,11 +20,11 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
     "postcss-preset-env": "^7.0.1",
     "semantic-release": "^17.4.2",
     "tailwindcss": "^2.2.19",
