--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "webpackbar": "^5.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
